--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,7 @@
 @import "@fontsource/space-grotesk/700.css";
 
 @import "tailwindcss";
+@import "./design-system.css";
 
 @theme {
     /* Custom colors */
